replace toList with collectors